# repro_hls_base_no_prelude

./: cabal.project
base/: Main.hs  repro-base.cabal
base-noprelude/: repro-base-noprelude.cabal
